# Q03_Project_Based_Learning_Monday_2_to_5

projects/deployement/: fastapi.py
projects/deployement/app/: fastapi.py  pyproject.toml  streamlit.py  vercel.json
projects/fast-api/: README.md  main.py  pyproject.toml
projects/money-making-machine/: main.py  pyproject.toml
projects/number_guess_game/: main.py
projects/password_generator/: main.py  pyproject.toml
projects/personal_library_manager_cli/: books_data.json  main.py
projects/simple_calculater_uv_streamlit/app/: main.py  pyproject.toml
projects/time-zone-app/: main.py  pyproject.toml
projects/todo-cli/: todo.py
projects/unit_converter/: main.py  pyproject.toml
